--- a/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
@@ -3,5 +3,21 @@
 <property name="name" value="MyPojoForm.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<dataHolder supportedType="className" inputId="" name="#FF54A7" type="dataModelerEntry" outId="complexInput1" value="keypartner.form_modeling.MyPojo" id="mypojo1"/>
+<field position="0" name="mypojo1_field1" type="InputText" id="199424214">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;field1 (mypojo1)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="mypojo1_in/field1"/>
+<property name="outputBinding" value="complexInput1/field1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="mypojo1_field2" type="InputText" id="2123128473">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;field2 (mypojo1)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="mypojo1_in/field2"/>
+<property name="outputBinding" value="complexInput1/field2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder supportedType="className" inputId="mypojo1_in" name="#E9E371" type="dataModelerEntry" outId="complexInput1" value="keypartner.form_modeling.MyPojo" id="mypojo1"/>
 </form>
