--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -3,26 +3,15 @@
 <property name="name" value="form-modeling.test-forms-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="mypojo_field1" type="InputText" id="1964197883">
+<field position="0" name="1099739294" type="Subform" id="1099739294">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field1 (mypojo)quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Subform0quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="outputBinding" value="complexInput1/field1"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="mypojo_field2" type="InputText" id="822464107">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field2 (mypojo)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="complexInput1/field2"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="mypojo_field3" type="InputTextPrimitiveInteger" id="2092440338">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field3 (mypojo)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="complexInput1/field3"/>
-<property name="fieldClass" value="int"/>
+<property name="outputBinding" value="complexInput1"/>
+<property name="defaultSubform" value="MyPojoForm.form"/>
+<property name="fieldClass" value="java.lang.Object"/>
 </field>
 <dataHolder supportedType="className" inputId="" name="#E9E371" type="dataModelerEntry" outId="complexInput1" value="keypartner.form_modeling.MyPojo" id="mypojo"/>
 <dataHolder inputId="" name="#E9E371" type="basicType" outId="simpleInput1" value="java.lang.String" id="simpleInput1"/>
