--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -9,7 +9,7 @@
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="outputBinding" value="complexInput1"/>
+<property name="outputBinding" value="model1"/>
 <property name="defaultSubform" value="MyModelForm.form"/>
 <property name="fieldClass" value="java.lang.Object"/>
 </field>
