--- a/form-modeling/src/main/resources/keypartner/form_modeling/MyModelForm.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/MyModelForm.form
@@ -3,7 +3,7 @@
 <property name="name" value="MyModelForm.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="mymodel_field1" type="InputText" id="2060898585">
+<field position="0" name="mymodel_field1" type="InputText" id="1679937325">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;field1 (mymodel)quot;"/>
 <property name="readonly" value="false"/>
@@ -11,13 +11,21 @@
 <property name="outputBinding" value="mymodel_out/field1"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="1" name="mymodel_field2" type="InputText" id="2082590529">
+<field position="1" name="mymodel_field2" type="InputText" id="1179895068">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;field2 (mymodel)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="mymodel_in/field2"/>
 <property name="outputBinding" value="mymodel_out/field2"/>
 <property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="mymodel_header" type="Subform" id="533337495">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;header (mymodel)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="mymodel_in/header"/>
+<property name="outputBinding" value="mymodel_out/header"/>
+<property name="fieldClass" value="java.lang.Object"/>
 </field>
 <dataHolder inputId="mymodel_in" name="#E9E371" type="dataModelerEntry" outId="mymodel_out" value="keypartner.form_modeling.MyModel" id="mymodel"/>
 </form>
