--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -14,6 +14,35 @@
 <property name="defaultSubform" value="MyModelForm.form"/>
 <property name="fieldClass" value="java.lang.Object"/>
 </field>
+<field position="1" name="model_field1" type="InputText" id="1764242260">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;field1 (model)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="model_in/field1"/>
+<property name="outputBinding" value="model_out/field1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="model_field2" type="InputText" id="1656769574">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;field2 (model)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="model_in/field2"/>
+<property name="outputBinding" value="model_out/field2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="model_header" type="Subform" id="2006443761">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;header (model)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="model_in/header"/>
+<property name="outputBinding" value="model_out/header"/>
+<property name="fieldClass" value="java.lang.Object"/>
+</field>
+<dataHolder inputId="model_in" name="#E9E371" type="dataModelerEntry" outId="model_out" value="keypartner.form_modeling.MyModel" id="model"/>
 <dataHolder supportedType="className" inputId="" name="#E9E371" type="dataModelerEntry" outId="complexInput1" value="keypartner.form_modeling.MyPojo" id="mypojo"/>
 <dataHolder inputId="" name="#E9E371" type="basicType" outId="simpleInput1" value="java.lang.String" id="simpleInput1"/>
 </form>
