--- a/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
@@ -3,28 +3,37 @@
 <property name="name" value="MyPojoForm.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="pojo_field1" type="InputText" id="2123041643">
+<field position="3" name="pojo_header" type="Subform" id="216344283">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field1 (pojo)quot;"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;header (pojo)quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/field1"/>
-<property name="outputBinding" value="pojo_out/field1"/>
+<property name="inputBinding" value="pojo_in/header"/>
+<property name="outputBinding" value="pojo_out/header"/>
+<property name="fieldClass" value="java.lang.Object"/>
+</field>
+<field position="0" name="pojo_orderDate" type="InputText" id="1205799968">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;orderDate (pojo)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="pojo_in/orderDate"/>
+<property name="outputBinding" value="pojo_out/orderDate"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="1" name="pojo_field2" type="InputText" id="2099817789">
+<field position="1" name="pojo_orderId" type="InputText" id="984537564">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field2 (pojo)quot;"/>
+<property name="label" value="quot;enquot;,quot;orderId (pojo)quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/field2"/>
-<property name="outputBinding" value="pojo_out/field2"/>
+<property name="inputBinding" value="pojo_in/orderId"/>
+<property name="outputBinding" value="pojo_out/orderId"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="pojo_field3" type="InputTextPrimitiveInteger" id="356103664">
+<field position="2" name="pojo_quantity" type="InputTextPrimitiveInteger" id="1617466881">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field3 (pojo)quot;"/>
+<property name="label" value="quot;enquot;,quot;quantity (pojo)quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/field3"/>
-<property name="outputBinding" value="pojo_out/field3"/>
+<property name="inputBinding" value="pojo_in/quantity"/>
+<property name="outputBinding" value="pojo_out/quantity"/>
 <property name="fieldClass" value="int"/>
 </field>
 <dataHolder supportedType="className" inputId="pojo_in" name="#E9E371" type="dataModelerEntry" outId="pojo_out" value="keypartner.form_modeling.MyPojo" id="pojo"/>
