--- a/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/MyPojoForm.form
@@ -6,10 +6,13 @@
 <field position="3" name="pojo_header" type="Subform" id="216344283">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;enquot;,quot;header (pojo)quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="pojo_in/header"/>
 <property name="outputBinding" value="pojo_out/header"/>
+<property name="defaultSubform" value="HeaderForm.form"/>
 <property name="fieldClass" value="java.lang.Object"/>
 </field>
 <field position="0" name="pojo_orderDate" type="InputText" id="1205799968">
