--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -3,18 +3,6 @@
 <property name="name" value="form-modeling.test-forms-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="3" name="pojo_header" type="Subform" id="268249202">
-<property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/header"/>
-<property name="outputBinding" value="pojo_out/header"/>
-<property name="defaultSubform" value="HeaderForm.form"/>
-<property name="fieldClass" value="java.lang.Object"/>
-</field>
 <field position="0" name="pojo_orderDate" type="InputText" id="1510850259">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;orderDate (pojo)quot;"/>
@@ -31,13 +19,24 @@
 <property name="outputBinding" value="pojo_out/orderId"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="pojo_quantity" type="InputTextPrimitiveInteger" id="1141715033">
+<field position="2" name="pojo_header" type="Subform" id="268249202">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;quantity (pojo)quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/quantity"/>
-<property name="outputBinding" value="pojo_out/quantity"/>
-<property name="fieldClass" value="int"/>
+<property name="inputBinding" value="pojo_in/header"/>
+<property name="outputBinding" value="pojo_out/header"/>
+<property name="defaultSubform" value="HeaderForm.form"/>
+<property name="fieldClass" value="java.lang.Object"/>
+</field>
+<field position="3" name="pojo_items" bag-type="keypartner.form_modeling.MyItem" type="MultipleSubform" id="398345332">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;items (pojo)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="pojo_in/items"/>
+<property name="outputBinding" value="pojo_out/items"/>
+<property name="fieldClass" value="java.util.List"/>
 </field>
 <dataHolder inputId="model_in" name="#E9E371" type="dataModelerEntry" outId="model_out" value="keypartner.form_modeling.MyModel" id="model"/>
 <dataHolder supportedType="className" inputId="pojo_in" name="#E9E371" type="dataModelerEntry" outId="pojo_out" value="keypartner.form_modeling.MyPojo" id="pojo"/>
